a few more --add-opens for JDK 16
Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>